# object-oriented-programming-labs

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: solution.hpp
lab1/src/: solution.cpp
lab1/tests/: solution.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/include/: money.hpp
lab2/src/: money.cpp
lab2/tests/: money.cpp
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
lab3/src/: array.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
lab3/tests/: array.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
lab4/: CMakeLists.txt  README.md  main.cpp
lab4/include/: array.hpp  figure.hpp  hexagon.hpp  pentagon.hpp  point.hpp  rhombus.hpp
lab4/tests/: array.cpp  hexagon.cpp  pentagon.cpp  point.cpp  rhombus.cpp
lab5/: CMakeLists.txt  README.md  main.cpp
lab5/include/: memory_resource.hpp  vector.hpp  vector_iterator.hpp
lab5/tests/: memory_resource.cpp  vector.cpp  vector_iterator.cpp
lab6/: CMakeLists.txt  README.md  main.cpp
lab6/include/: battle_visitor.hpp  bear.hpp  dungeon.hpp  npc.hpp  npc_factory.hpp  observer_console.hpp  observer_file.hpp  rogue.hpp  visitor.hpp  werewolf.hpp
lab6/src/: battle_visitor.cpp  bear.cpp  dungeon.cpp  npc.cpp  npc_factory.cpp  observer_console.cpp  observer_file.cpp  rogue.cpp  werewolf.cpp
lab6/tests/: battle_visitor.cpp  bear.cpp  dungeon.cpp  npc_factory.cpp  observer_console.cpp  observer_file.cpp  point.cpp  rogue.cpp  werewolf.cpp
lab7/: CMakeLists.txt  README.md  main.cpp
lab7/include/: bear.hpp  dungeon.hpp  game.hpp  npc.hpp  npc_factory.hpp  observer.hpp  observer_console.hpp  observer_file.hpp  point.hpp  random.hpp  rogue.hpp  task_queue.hpp  thread_safe_cout.hpp  werewolf.hpp
lab7/src/: bear.cpp  dungeon.cpp  game.cpp  npc.cpp  npc_factory.cpp  observer_console.cpp  observer_file.cpp  point.cpp  random.cpp  rogue.cpp  task_queue.cpp  thread_safe_cout.cpp  werewolf.cpp
lab7/tests/: bear.cpp  dungeon.cpp  game.cpp  npc.cpp  npc_factory.cpp  observer_console.cpp  observer_file.cpp  point.cpp  random.cpp  rogue.cpp  task_queue.cpp  thread_safe_cout.cpp  werewolf.cpp
